# di-live

./: .gitignore  README.md  build-di-src.py  di-live  di-live.py  gen_type_stubs.py  pyproject.toml
compat/: anna-install  apt-install  udpkg
d-i/: Makefile  README.rst  clone_and_copy.sh  readme
d-i/source/live-installer/: Makefile.in  autogen.sh  configure  configure.ac  live-installer  waypoints
d-i/source/live-installer/debian/: changelog  control  copyright  gbp.conf  install  live-installer.install  live-installer.isinstallable  live-installer.postinst  live-installer.templates  postinst  rules
d-i/source/live-installer/debian/po/: POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  bn.po  bo.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  km.po  kn.po  ko.po  ku.po  (+36 more)
d-i/source/live-installer/finish-install.d/: 60remove-live-packages  98exit-installer
d-i/source/live-installer/include/: config.h.in
d-i/source/live-installer/live-installer.d/: initramfs-tools  network  openssh-server  remove-packages  ssl-cert  xserver-xorg
d-i/source/live-installer/post-base-installer.d/: 25live-installer-console-setup
d-i/source/live-installer/src/: Makefile.am  Makefile.in  print-inodes.c
d-i/source/live-installer/support/: btrfs  dir  ext2  ext3  extX  rofs  squashfs
debian/: control  copyright  di-live.init  di-live.install  di-live.links  di-live.service  di-live.templates  init  install  rules  service  (+1 more)
(+1698 files in other folders)
