dnl Copyright (C) 2007 O.S. Systems
dnl Copyright (C) 2007 Otavio Salvador <otavio@debian.org>

dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2 of the License, or
dnl (at your option) any later version.

dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.

dnl You should have received a copy of the GNU General Public License along
dnl with this program; if not, write to the Free Software Foundation, Inc.,
dnl 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.

AC_INIT([live-installer], [0])
AC_CONFIG_HEADER(include/config.h:include/config.h.in)
AM_INIT_AUTOMAKE([1.8])

AM_MAINTAINER_MODE([enable])

dnl Checks for programs we'd need for building
AC_PROG_MAKE_SET
AC_PROG_CC

AC_OUTPUT(Makefile src/Makefile)
